# rust-web

./: .gitignore  Cargo.toml  Dockerfile  README.md  api.md  blog_project_plan.md  build.sh  dev.sh  log4rs.yaml  openapi.json  rust_blog_backend_plan.md  rust_learning_path.md
docs/: api.md  architecture.md  deployment.md  development.md  index.md
src/: lib.rs  main.rs
src/api/: auth.rs  authenticator.rs  handlers.rs  mod.rs  routes.rs  user.rs
src/config/: api_doc.rs  log.rs  mod.rs  permission.rs  swagger_ui.rs
src/db/: database.rs  mod.rs
src/dto/: user.rs
src/error/: error.rs  json_error.rs  mod.rs
src/middleware/: auth.rs  helpers.rs  logger.rs  mod.rs
src/models/: article.rs  article_tags.rs  categories.rs  github_commits.rs  github_repositories.rs  library_tags.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  storage.rs  tags.rs  third_party_libraries.rs  user.rs
src/services/: articles.rs  auth.rs  authenticator.rs  categories.rs  mod.rs  routes.rs  sse.rs  tags.rs  user.rs
src/sql/: article_tags.sql  articles.sql  categories.sql  github_commits.sql  github_repositories.sql  library_tags.sql  storage.sql  tags.sql  third_party_libraries.sql  user.sql  users.sql
src/types/: common.rs
src/utils/: common_guard.rs  data_processing.rs  error_handler.rs  jsonwebtoken.rs  mod.rs  permission_guard.rs  query_parameter.rs  serde.rs  sse.rs
